--- a/Empresa.ipynb
+++ b/Empresa.ipynb
@@ -13,28 +13,38 @@
     {
       "cell_type": "code",
       "source": [
-        "class Employee:\n",
+        "from abc import ABC, abstractmethod\n",
+        "\n",
+        "class AbstractEmployee(ABC):\n",
         "    new_id = 1\n",
         "\n",
         "    def __init__(self):\n",
-        "        self.id = Employee.new_id\n",
-        "        Employee.new_id += 1\n",
+        "        self.id = AbstractEmployee.new_id\n",
+        "        AbstractEmployee.new_id += 1\n",
+        "\n",
+        "    @abstractmethod\n",
+        "    def say_id(self):\n",
+        "        pass\n",
+        "\n",
+        "class Employee(AbstractEmployee):\n",
+        "    new_id = 1\n",
+        "\n",
+        "    def __init__(self, name=None):\n",
+        "        super().__init__()\n",
+        "        self.__company = \"Mr.Jabon\"\n",
+        "        self._name = name\n",
         "\n",
         "    def say_id(self):\n",
-        "        print(\"Employee with id \", self.id, \"added sucessfully to the meting!\")\n",
+        "        print(\"My id is\", self.id)\n",
         "\n",
+        "    def get_name(self):\n",
+        "        return self._name\n",
         "\n",
-        "class Admin(Employee):\n",
-        "    def say_id(self):\n",
-        "        print('el admin es roland')\n",
-        "        super().say_id()\n",
+        "    def set_name(self, name):\n",
+        "        self._name = name\n",
         "\n",
-        "\n",
-        "class Manager(Admin):\n",
-        "    def say_id(self):\n",
-        "        print('the manaegr is josemario02')\n",
-        "        super().say_id()\n",
-        "\n",
+        "    def del_name(self):\n",
+        "        del self._name\n",
         "\n",
         "class User:\n",
         "    def __init__(self, username, role):\n",
@@ -42,8 +52,22 @@
         "        self.role = role\n",
         "\n",
         "    def say_user_info(self):\n",
-        "        print(\"Username:\", self.username, \"| Role:\", self.role)\n",
+        "        print(\"Username:\", self.username)\n",
+        "        print(\"Role:\", self.role)\n",
         "\n",
+        "class Admin(Employee, User):\n",
+        "    def __init__(self, name=None):\n",
+        "        super().__init__(name)\n",
+        "        User.__init__(self, self.id, \"Admin\")\n",
+        "\n",
+        "    def say_id(self):\n",
+        "        super().say_id()\n",
+        "        print(\"I am an Admin\")\n",
+        "\n",
+        "class Manager(Admin):\n",
+        "    def say_id(self):\n",
+        "        print(\"I am in charge.\")\n",
+        "        super().say_id()\n",
         "\n",
         "class Meeting:\n",
         "    def __init__(self):\n",
@@ -51,58 +75,41 @@
         "\n",
         "    def __add__(self, other):\n",
         "        self.attendees.append(other)\n",
-        "        print(\"Added attendee with ID:\", other.id, \"successfully.\")\n",
+        "        print(\"Employee with ID\",other.id,\"added successfully  \")\n",
+        "        return self\n",
         "\n",
         "    def __len__(self):\n",
         "        return len(self.attendees)\n",
         "\n",
         "\n",
+        "# Código para probar\n",
         "e1 = Employee()\n",
         "e2 = Employee()\n",
-        "e3 = Admin()\n",
-        "e4 = Manager()\n",
-        "\n",
-        "e1.say_id()\n",
-        "e2.say_id()\n",
-        "e3.say_id()\n",
-        "e4.say_id()\n",
-        "\n",
-        "class Admin(Employee, User):\n",
-        "    def __init__(self):\n",
-        "        Employee.__init__(self)\n",
-        "        User.__init__(self, str(self.id), \"Admin\")\n",
-        "\n",
-        "    def say_id(self):\n",
-        "        print(\"I am an Admin\")\n",
-        "        super().say_id()\n",
-        "\n",
-        "e3 = Admin()\n",
-        "e3.say_user_info()\n",
-        "\n",
-        "meeting = [Employee(), Admin(), Manager()]\n",
-        "for attendee in meeting:\n",
-        "    attendee.say_id()\n",
+        "e3 = Admin(\"Rowald\")\n",
+        "e4 = Manager(\"Mikheltodd\")\n",
         "\n",
         "m1 = Meeting()\n",
         "m1 + e1\n",
         "m1 + e2\n",
         "m1 + e3\n",
-        "print(\"Meeting size:\", len(m1))"
+        "m1 + e4\n",
+        "print(f\"# Attendees to the meeting: {len(m1)}\")\n",
+        "e1.set_name(\"Ryan\")\n",
+        "for e in m1.attendees:\n",
+        "    print(f\"\\nMy name is {e.get_name()} and I work for {e._Employee__company}\")\n",
+        "    e.say_id()\n",
+        "    try:\n",
+        "        e.say_user_info()\n",
+        "    except AttributeError:\n",
+        "        continue\n",
+        "\n",
+        "e1.del_name()\n"
       ],
       "metadata": {
-        "id": "kXyumLcgiZb8"
+        "id": "qVkdZyGoTEIl"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Presentado por Jose Mario Ramos Araujo (jose.ramosa@upb.edu.co)"
-      ],
-      "metadata": {
-        "id": "sEi5SrW6lAwj"
-      }
     }
   ],
   "metadata": {
