Se creó con Colab

--- a/Empresa.ipynb
+++ b/Empresa.ipynb
@@ -45,6 +45,9 @@
         "\n",
         "    def del_name(self):\n",
         "        del self._name\n",
+        "    def del_name(self):\n",
+        "        print(f\"_{self._name} deleted\")\n",
+        "        del self._name\n",
         "\n",
         "class User:\n",
         "    def __init__(self, username, role):\n",
@@ -94,7 +97,7 @@
         "m1 + e3\n",
         "m1 + e4\n",
         "print(f\"# Attendees to the meeting: {len(m1)}\")\n",
-        "e1.set_name(\"Ryan\")\n",
+        "e1.set_name(\"carlos\")\n",
         "for e in m1.attendees:\n",
         "    print(f\"\\nMy name is {e.get_name()} and I work for {e._Employee__company}\")\n",
         "    e.say_id()\n",
@@ -110,6 +113,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Presentado por Jose Mario Ramos Araujo (jose.ramosa@upb.edu.co)"
+      ],
+      "metadata": {
+        "id": "FLV-XDBOUI2b"
+      }
     }
   ],
   "metadata": {
